themes/gophercon/static/2016/css/theme-gophercon.css
/* ... */
.contact-methods li {
  margin-bottom: 12px;
}
.contact-methods li:last-child {
  margin-bottom: 0px;
}
.contact-methods i {
  font-size: 36px;
  color: #333333;
}
.contact-methods span {
  display: inline-block;
  position: relative;
  bottom: 10px;
  left: 8px;
  font-size: 16px;
}
footer.classic .social-profiles {
  margin-top: 36px;
}
.social-profiles {
  display: inline-block;
  overflow: hidden;
}
.social-profiles li {
  float: left;
  margin-right: 36px;
}
.social-profiles li:last-child {
  margin-right: 0px;
}
.social-profiles li a {
  color: #333333;
  font-size: 20px;
}

body .colors {
	margin: 0;
}
body .colors div {
	height: 5px;
}
body .colors .col-md-2 {
	-webkit-animation-duration: 0.5s;
	-moz-animation-duration: 0.5s;
	-ms-animation-duration: 0.5s;
	-o-animation-duration: 0.5s;
	animation-duration: 0.5s;
	padding: 0;
	margin: 0;
}
body .colors .col-md-2:nth-child(1n+0) {
    background: #40657c;
  	-webkit-animation-delay: 0.1s;
	-moz-animation-delay: 0.1s;
	-ms-animation-delay: 0.1s;
	-o-animation-delay: 0.1s;
	animation-delay: 0.1s;
}
body .colors .col-md-2:nth-child(2n+0) {
    background: #4cc4ec;
	-webkit-animation-delay: 0.2s;
	-moz-animation-delay: 0.2s;
	-ms-animation-delay: 0.2s;
	-o-animation-delay: 0.2s;
	animation-delay: 0.2s;
}
body .colors .col-md-2:nth-child(3n+0) {
    background: #edead7;
	-webkit-animation-delay: 0.3s;
	-moz-animation-delay: 0.3s;
	-ms-animation-delay: 0.3s;
	-o-animation-delay: 0.3s;
	animation-delay: 0.3s;
}
body .colors .col-md-2:nth-child(4n+0) {
    background: #b3ad9f;
	-webkit-animation-delay: 0.4s;
	-moz-animation-delay: 0.4s;
	-ms-animation-delay: 0.4s;
	-o-animation-delay: 0.4s;
	animation-delay: 0.4s;
}
body .colors .col-md-2:nth-child(5n+0) {
    background: #f9b575;
	-webkit-animation-delay: 0.5s;
	-moz-animation-delay: 0.5s;
	-ms-animation-delay: 0.5s;
	-o-animation-delay: 0.5s;
	animation-delay: 0.5s;
}
body .colors .col-md-2:nth-child(6n+0) {
    background: #f07332;
	-webkit-animation-delay: 0.6s;
	-moz-animation-delay: 0.6s;
	-ms-animation-delay: 0.6s;
	-o-animation-delay: 0.6s;
	animation-delay: 0.6s;
}

.hotel-address {
  font-size: 14px;
}

.hotel-code {
  color: #999;
  display: block;
  float: right;
  font-size: 11px;
  position: relative;
  top: -18px;
}

.hotel-link a {
  border-color: #FF6B1E !important;
  color: #FF6B1E !important;
}

.hotel-name {
  font-size: 18px;
}

.hotel-price {
  background: rgba(40, 40, 40, 0.6); 
  color: #fff; 
  height; 26px; 
  padding: 6px 12px; 
  font-size: 16px; 
  position: relative; 
  bottom: -38px; 
  margin-top: -42px;
  width: 160px;
  float: right;
  text-shadow: 0px 0px 10px rgba(0,0,0,0.8);
}

.hotel-phone {
  color: #36566B;
  float: right;
  font-size: 15px;
}

